<resources>
    <string name="app_name">BointZ</string>
    <string name="points_tv_desc">The earned points</string>
    <string name="earn_bt_desc">This Button to start watching the ad</string>
    <string name="earn_bt_tv">Earn spin</string>
    <string name="orange">Orange</string>
    <string name="etisalat">Etisalat</string>
    <string name="vodafone">Vodafone</string>
    <string name="we">WE</string>
    <string name="number_et_hint">Enter your phone number</string>
    <string name="floating_bt_desc">Button for going to the checkout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_tv">Don\'t have account ? SIGN UP</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="spinner">Spinner</string>
    <string name="spins">Spins</string>
    <string name="points">Points</string>
    <string name="support_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="about_tv">"This App is made for only making a little money from nothing just watching some ads as daily thing u do to earn spins for points  and for that u do not have to recharge again just use our app to do that  Thanks for using this, for any comments or problems just feel free to mail us at   yokareda10@gmai.com Or just send message at whatsApp +2011 5656 2468.  Best of luck…   As an advice, Don't spin the spinner with your hand because it will waste your spins for trying  , Just press the key to start spinning. "</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change Password</string>
    <string name="start">Start</string>
    <string name="started">Wheel Started</string>
    <string name="version">V 1.1.0</string>
    <string name="postive">Recharge</string>
    <string name="negative">Cancel</string>
    <string name="title">Choose Company</string>
    <string name="no_enough">Please get 50 point</string>
    <string name="app_id"></string>
    <string name="about_bar"></string>
    <string name="checkout_bar"></string>
    <string name="login_bar"></string>
    <string name="main_bar"></string>
    <string name="register_bar"></string>
    <string name="spinning_bar"></string>
    <string name="checkout_inis"></string>
    <string name="main_rew"></string>
    <string name="main_int"></string>
    <string name="spinning_int"></string>
    <string name="spinning_int2"></string>
    <string name="spinning_rew"></string>
    <string name="spinning_int3"></string>


</resources>