<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yo2f.myapplication.MainActivity">
    <ImageView
        android:id="@+id/imgb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/st_sc"
        android:scaleType="centerCrop"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:visibility="invisible"
        android:layout_margin="16dp"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:contentDescription="@string/points_tv_desc"
            android:fontFamily="sans-serif-black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0.0" />

        <Button
            android:id="@+id/earn_bt"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/earn_bt_desc"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/earn_bt_tv"
            android:textColor="@color/white"
            app:backgroundTint="#0E8378"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spins" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:backgroundTint="#65473D"
            android:contentDescription="@string/floating_bt_desc"
            android:focusable="true"
            android:onClick="floatingBt"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:adSize="BANNER"
            app:adUnitId="@string/main_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/points"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/spins"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/spins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/points_tv_desc"
            android:fontFamily="sans-serif-black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:onClick="spinner"
            android:text="@string/spinner"
            android:textColor="@color/white"
            app:backgroundTint="#AB47BC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/points" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>